fix(menubar): spacing for RTL

--- a/styles/web/sass/core/_legacy/_mxui.scss
+++ b/styles/web/sass/core/_legacy/_mxui.scss
@@ -3002,6 +3002,9 @@ input[type="checkbox"] {
 // .mx-listview {
 //     padding: 8px;
 // }
+.mx-list {
+    list-style: none;
+}
 .mx-listview > ul {
     padding: 0px;
     list-style: none;
